Unit test for schedular + bug fix canAddCarToAssemblyLine()